# check-ignore

./: .gitignore  Cargo.toml  README.md
src/: main.rs
